@@ -1679,7 +1679,7 @@ name|excludeTags
 operator|=
 name|getStringList
 argument_list|(
-name|m
+name|domainMap
 argument_list|,
 literal|"excludeTags"
 argument_list|)
